# RaccoonBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  global-commands.js  index.js  package-lock.json  package.json
app/commands/: global-commands.js
src/: main.rs
src/commands/: mod.rs  pause.rs  ping.rs  play.rs  queue.rs  resume.rs  roulette.rs  skip.rs  stop.rs
